# rusty_gui_template

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/app/: mod.rs  sub_module1.rs
src/app/tests/: mod.rs
src/module1/: mod.rs
