[package]
name = "rust_library_template"
version = "0.1.0"
authors = ["Name Surname <mail@mail.com>"]
edition = "2021"
description = "A rust template for library development."
readme = "README.md"
repository = "https://github.com/.........."
license = "MIT"
keywords = ["keyword1", "keyword2", "keyword3", "keyword4"]

[lib]
name = "rust_library_template"
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = false        # Documentation examples are tested by default.
crate-type = ["lib"]   # The crate types to generate.

[[bin]]
name = "main"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

