[package]
name = "rust_library_template"
version = "1.0.1"
authors = ["Foti Alberto <albertofots@gmail.com>"]
edition = "2021"
description = "A rust template for library development."
readme = "README.md"
repository = "https://github.com/.........."
license = "MIT"
keywords = ["gui", "framework", "imgui", "immediate"]

[lib]
name = "rust_library_template"
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = false        # Documentation examples are tested by default.
crate-type = ["lib"]   # The crate types to generate.

[[bin]]
name = "main"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
